src/stylesheets/components/item/_view.scss
//
// Item view
// --------------------------------------------------

.item.view {
  position: absolute;
  left: 0;
  top: 0;
  width: 100%;
  height: 100%;
  z-index: $zindex-item;
  display: flex;
  background: $body-bg;
  contain: strict;

  .item-mode-enter &,
  .item-mode-leave & {
    transition: transform $mode-transition;
  }

  @if $platform == darwin {
    .panel-group-header {
      .toolbar-left {
        .item-mode &,
        .item-mode-enter-active & {
          margin-left: (
            $window-controls-width
            + $window-controls-offset-x
            - $window-controls-margin);
        }

        .project-mode-enter-active & {
          margin-left: 0;
        }
      }
    }
  }

  .icon-chevron16 {
    transform: rotate(-90deg);
  }
}

.item-container {
  flex: 1 1 0;
  display: flex;
  flex-direction: column;
  padding-left: $space-min;
}

